fix : edit spacing for sns btn

--- a/frontend/src/views/LoginPage/LoginPage.css
+++ b/frontend/src/views/LoginPage/LoginPage.css
@@ -148,19 +148,19 @@
   margin-right: -50%;
   transform: translate(-50%, -50%);
   background: white;
-  padding: 20px;
+  padding: 20px 36px 36px 40px;
   border: 1px solid black;
-  border-radius: 8px;
+  border-radius: 15px;
   box-shadow: 4px 4px 0 0 rgb(0, 0, 0);
-  max-width: 500px;
-  width: 350px;
-  z-index: 99999;
+  width: 100%;
+  max-width: 350px;
+  z-index: 9999;
   box-sizing: border-box;
 }
 
 .modal-close-btn {
   position: absolute;
-  top: 10px;
+  top: 6px;
   right: 10px;
   background: none;
   border: none;
@@ -187,6 +187,7 @@
   justify-content: center;
   gap: 7px;
 }
+
 .sns-signup-btn span {
   margin-bottom: 1px;
 }
@@ -208,8 +209,8 @@
   height: 18px;
 }
 .kakao img {
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
 }
 .naver {
   background-color: #00bf18;
@@ -220,17 +221,26 @@
 .kakao {
   background-color: #ffe90a;
   color: black;
-  padding: 7px;
+  padding: 8px;
 }
 
 .google {
   background-color: white;
   color: black;
+  padding: 9px;
 }
+.google img {
+  margin-right: 4px;
+  scale: 1.1;
+}
+.google span {
+  margin-right: 9px;
+}
+
 .modal-title {
   text-align: center;
   font-size: 1.5rem;
-  margin-bottom: 20px;
+  margin: 20px 0 30px 0;
 }
 
 /* 미디어 쿼리 */
